--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -5,14 +5,13 @@
   <br /><br /> 
 </form> 
 <div class='table-container'>
-  <!-- <ag-grid-angular 
+  <ag-grid-angular 
     style="width: 80%; height: 80%;" 
     class="ag-theme-balham"
     [rowData]="rowData"  
     [columnDefs]="columnDefs"
     >
-</ag-grid-angular> -->
+</ag-grid-angular>
 </div>
 
 <router-outlet></router-outlet>
-<!-- | async  -->
